<resources>
    <string name="app_name">Sportfogadás-Segítő</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="szelvenyek">Szelvények</string>
    <string name="statisztikak">Statisztikák</string>
    <string name="csapatstatisztikak">Csapatstatisztikák</string>
    <string name="win">Nyert</string>
    <string name="lose">Vereség</string>
    <string name="date">Dátum</string>
    <string name="description">Leírás</string>
    <string name="price">Ár</string>
    <string name="expectedPrize">Várható nyeremény</string>
    <string name="isEnded">Befejeződött?</string>
    <string name="new_szelveny">Új szelvény</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Mégse</string>
    <string name="isWin">Nyert</string>
    <string name="homeScore">Hazai pontszáma</string>
    <string name="awayScore">Vendég pontszáma</string>
    <string name="awayTeam">Vendég csapat</string>
    <string name="homeTeam">Hazai csapat</string>
    <string name="odds">Odds</string>
    <string name="whowillwin">Ki fog nyerni?</string>
    <string name="new_meccs">Új meccs</string>
    <string name="willhomewin">Hazai fog nyerni?</string>
    <string name="add">Hozzáad</string>
    <string name="newteam">Új</string>
    <string name="winrate">Győzelmi arány:</string>
    <string name="profit">Profit:</string>
    <string name="melyikcsapat">Melyik csapatra vagy kíváncsi?</string>
    <string name="search">Keresés</string>
    <string name="teamwinrate">Csapat győzelmi aránya:</string>
    <string name="yourwinrateonteammatches">"A találati arányod a csapat meccsein: "</string>
    <string name="valasztas">Választás</string>
    <string name="time">Időpont</string>
    <string name="megse">Mégse</string>
</resources>