<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="24dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/homeTeam"/>

        <EditText
            android:id="@+id/etHomeTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/awayTeam"/>

        <EditText
            android:id="@+id/etAwayTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/homeScore"/>

        <EditText
            android:id="@+id/etHomeScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/awayScore"/>

        <EditText
            android:id="@+id/etAwayScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/odds"/>

        <EditText
            android:id="@+id/etMatchOdds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/whowillwin"
            android:textSize="20dp"/>
        <!--<RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:checkedButton="@id/etPickedHome"
            >
            <RadioButton android:id="@+id/etPickedHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeTeam"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/etPickedAway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/awayTeam" />
        </RadioGroup>-->
        <CheckBox
            android:id="@+id/isHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/willhomewin"/>
        <CheckBox
            android:id="@+id/isEnded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/isEnded"/>

        <CheckBox
            android:id="@+id/isWin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/isWin"/>

    </LinearLayout>
</ScrollView>
