<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    android:weightSum="6"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/felirat"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3"
        android:weightSum="3"
        android:layout_marginBottom="25dp">



        <Button
            android:id="@+id/buttontoSzelvenyek"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/szelvenyek" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/statisztikak" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:text="@string/csapatstatisztikak" />
    </LinearLayout>
</LinearLayout>