<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    android:weightSum="6"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/felirat"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="5"
        android:layout_marginBottom="25dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/melyikcsapat"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            >

        </TextView>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="3"
            android:weightSum="5"
            android:layout_marginBottom="25dp">
            <EditText
                android:id="@+id/idMelyikCsapat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="20sp"
                >


            </EditText>
            <Button
                android:id="@+id/search_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/search">

            </Button>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginBottom="25dp"

        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/teamwinrate"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_weight="1"
        >

    </TextView>

        <TextView
            android:id="@+id/idWinrate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_gravity="center">


        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yourwinrateonteammatches"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_gravity="center">

        </TextView>

        <TextView
            android:id="@+id/idProfit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_gravity="center">


        </TextView>

    </LinearLayout>
</LinearLayout>